[java] fix Java 9 warning